# HLSCore

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
dev_tools/: mlir_flow_to_png.sh
include/: BindExternalIP.h  CirctFriendlyLoops.hpp  CompileRepeat.hpp  DeleteUnusedMemory.h  FloatToInt.h  HLS.hpp  HLSDynamic.hpp  HLSStatic.hpp  HLS_C_API.hpp  IRLevel.hpp  LoweringPipelines.hpp  Options.hpp  OutputMemrefPassByRef.h  WriteSingleFileOutput.hpp  logging.hpp
src/: BindExternalIP.cpp  CirctFriendlyLoops.cpp  CompileRepeatPass.cpp  FloatToInt.cpp  HLS.cpp  HLSCore.cpp  HLSDynamic.cpp  HLSStatic.cpp  HLS_C_API.cpp  LoweringPipelines.cpp  Options.cpp  OutputMemrefPassByRef.cpp  WriteSingleFileOutput.cpp
